surport swagger 2.0 & openApi 3.0

--- a/swagger-ui/index.html
+++ b/swagger-ui/index.html
@@ -83,7 +83,7 @@
 
       // Build a system
       const ui = SwaggerUIBundle({
-        url: "/docs",
+        url: "/swagger-ui/docs",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
